# SC_Final

./: .gitignore  Cargo.toml  README.md  experiment.sh  experiment_correctness.sh  experiment_prob_speed.sh  random_num.py
experiment/: experiment_det_speed.sh  experiment_prob_speed.sh  experiment_type.sh
src/: aks.rs  apr_cl.rs  apr_cl_notwork.rs  baillie_psw.rs  brute_force.rs  brute_force_u64.rs  ecpp_notwork.rs  fermat_little_theorem.rs  miller_rabin.rs  sieve_of_eratosthenes.rs  strong_lucas.rs
